--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,7 +27,7 @@
                                     <div class="ui-g-3">
                                         <i class="icon icon-send menu-icon"></i>
                                     </div>
-                                    <div class="ui-g-9 menu-text">Send coins</div>
+                                    <div class="ui-g-9 menu-text">Send</div>
                                 </div>
                             </mat-list-item>
                             <mat-list-item (click)="onReceiveCoins()" class="menu-item"
@@ -36,7 +36,7 @@
                                     <div class="ui-g-3">
                                         <i class="icon icon-receive menu-icon"></i>
                                     </div>
-                                    <div class="ui-g-9 menu-text">Receive coins</div>
+                                    <div class="ui-g-9 menu-text">Receive</div>
                                 </div>
                             </mat-list-item>
                             <mat-list-item (click)="onAddressbook()" class="menu-item"
@@ -49,7 +49,7 @@
                                 </div>
                             </mat-list-item>
                             <!-- <mat-list-item (click)="onPaperWallet()" class="menu-item"
-                                            [ngClass]="{active_menu_item: active_menu_item === 'paperwallet'}"> 
+                                            [ngClass]="{active_menu_item: active_menu_item === 'paperwallet'}">
                                 <div class="ui-g">
                                     <div class="ui-g-3">
                                         <i class="icon icon-receive menu-icon"></i>
