--- a/src/app/components/forms/paperwallet/paperwallet.component.html
+++ b/src/app/components/forms/paperwallet/paperwallet.component.html
@@ -5,7 +5,7 @@
     <p>A brt Paper Wallet is an offline mechanism for storing brt. The process involves printing the public and private keys onto paper.</p>
     <b>Disclaimer:</b> Use of the brt Paper Wallet Generator is offered solely to persons who are at least 18 years old. Your use of the Paper Wallet Generator is solely at your own risk, and you hereby agree to release brt and its affiliates from any and all claims arising out of or in connection with your use of the Paper Wallet Generator or your Paper Wallet, including risk of loss of the Paper Wallet key(s) and any other damages whatsoever.
     &nbsp;<br>
-    
+
     <div class="ui-g-12" style="padding-top: 2%;">
         <button pButton type="button" (click)="showCreateAddress()" icon="icon icon-text" iconPos="left" label="Create New Address"></button>
         <button pButton type="button" (click)="print()" *ngIf="newAddress" style="float: right;" label="Print"></button>
@@ -19,25 +19,25 @@
                 <qr-code [value]="newAddress" size="150" level="L"></qr-code>
             </div>
             <br/><br/>
-            <span>{{newAddress}}</span> 
+            <span>{{newAddress}}</span>
             &nbsp;<br><br>
         </div>
         <div class="key_box1" (contextmenu)="onPrivateContextMenu()">
             <h4>Private Key</h4>
             <div class="qrcode" id = "qrcode_secret">
                 <qr-code [value]="newSecretKey" size="150" level="L"></qr-code>
-            </div> 
+            </div>
             <br/><br/>
             <span>{{newSecretKey}}</span>
             &nbsp;<br><br>
         </div>
     </div>
     <div class="ui-g-12" style="padding-top: 3%;">
-        <button pButton type="button" (click)="instructions()" icon="icon icon-list-numbered" iconPos="left" 
+        <button pButton type="button" (click)="instructions()" icon="icon icon-list-numbered" iconPos="left"
                 label="Instructions"></button>
     </div>
 </div>
-<p-dialog [(visible)]="showInstructions" [width]="1000" [height]="650" [closable]="true" 
+<p-dialog [(visible)]="showInstructions" [width]="1000" [height]="650" [closable]="true"
     [modal]="true" appendTo="body">
     <p-header><span><i class="icon brt-dialog-icon icon-chip"></i>Paper Wallet Instructions</span></p-header>
     <div>
@@ -54,6 +54,6 @@
         <strong>Step 4. Keep your private key secret</strong><br>
         <p>The private key is literally the keys to your coins. If someone were to obtain it, they could withdraw the funds currently in the wallet, and any funds that might be deposited in that wallet.<br>
         </p><br>
-        <p>Please test sending a small amount before receiving any large payments. You can check the balance of your wallet using your public address here: https://explorer.brt.org/<br></p>
+        <p>Please test sending a small amount before receiving any large payments. You can check the balance of your wallet using your public address here: https://explorer.brt.network/<br></p>
     </div>
 </p-dialog>
