--- a/src/app/components/forms/receive-coins/receive-coins.component.html
+++ b/src/app/components/forms/receive-coins/receive-coins.component.html
@@ -1,5 +1,5 @@
 <div class="ui-widget ui-g form-container">
-    <p class="form-text-header">Receive Coins</p>
+    <p class="form-text-header">Receive</p>
     <div class="ui-g-12">
         <button pButton type="button" (click)="showCreateAccount()" icon="icon icon-text" iconPos="left" label="Create New Account"></button>
     </div>
@@ -39,7 +39,7 @@
         </p-dataTable>
     </div>
 </div>
-<p-dialog [(visible)]="showCreateAccountDialog" [width]="450" [height]="350" [closable]="true" 
+<p-dialog [(visible)]="showCreateAccountDialog" [width]="450" [height]="350" [closable]="true"
     [modal]="true" appendTo="body">
     <p-header><span><i class="icon brt-dialog-icon icon-chip"></i>Create new account</span></p-header>
     <div class="ui-g ui-fluid">
@@ -54,7 +54,7 @@
         <div class="ui-g-10">
             <div class="ui-inputgroup">
                 <span class="ui-inputgroup-addon" style="box-sizing: content-box;"><i class="icon icon-book"></i></span>
-                <input type="text" pInputText placeholder="Account Label" [(ngModel)]="accountLabel" style="width: 100%; padding-left: 5px;">         
+                <input type="text" pInputText placeholder="Account Label" [(ngModel)]="accountLabel" style="width: 100%; padding-left: 5px;">
             </div>
         </div>
         <div class="ui-g-1"></div>
@@ -62,7 +62,7 @@
         <div class="ui-g-10">
             <div class="ui-inputgroup">
                 <span class="ui-inputgroup-addon" style="box-sizing: content-box;"><i class="icon icon-key"></i></span>
-                <input type="password" pInputText placeholder="Wallet Password" [(ngModel)]="walletPassword" 
+                <input type="password" pInputText placeholder="Wallet Password" [(ngModel)]="walletPassword"
                        (keyup.enter)="doCreateNewAccount()" style="width: 100%; padding-left: 5px;" #passwordInput>
             </div>
         </div>
@@ -81,7 +81,7 @@
         <div class="ui-g-1"></div>
     </div>
     <div style="text-align: right;">
-        <button pButton type="button" (click)="doCreateNewAccount()" [(icon)]="create_icon" iconPos="right" label="Create" 
+        <button pButton type="button" (click)="doCreateNewAccount()" [(icon)]="create_icon" iconPos="right" label="Create"
                 style="width: 115px;" [disabled]="(exportPrivateKeys && !exportDirExists())"></button>
     </div>
     <p-footer *ngIf="showDialogFooter" class="footer-error">
@@ -98,13 +98,13 @@
     <div class="qrcode">
         <div class="ui-inputgroup">
             <span class="ui-inputgroup-addon" style="box-sizing: content-box; width: 60px;"><i class="icon icon-text"></i></span>
-            <input type="text" pInputText placeholder="Label" [(ngModel)]="label" (ngModelChange)="updateQRCode()">         
+            <input type="text" pInputText placeholder="Label" [(ngModel)]="label" (ngModelChange)="updateQRCode()">
         </div>
     </div>
     <div class="qrcode">
         <div class="ui-inputgroup">
             <span class="ui-inputgroup-addon" style="box-sizing: content-box; width: 60px;"><i class="icon icon-tag"></i></span>
-            <input type="number" placeholder="Destination Tag" [(ngModel)]="destinationTag" min="1" step="1" (ngModelChange)="updateQRCode()">         
+            <input type="number" placeholder="Destination Tag" [(ngModel)]="destinationTag" min="1" step="1" (ngModelChange)="updateQRCode()">
         </div>
     </div>
     <div class="qrcode">
